--- a/index.html
+++ b/index.html
@@ -1,64 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Fennec - Innovative Radio Platform</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Radio Website</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">Fennec</div>
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <a href="#" class="btn-login">Login</a>
-        </nav>
-        <div class="hero-section">
-            <h1>Experience Sound Beyond Limits with Fennec</h1>
-            <p>Discover the radio experience powered by artificial intelligence.</p>
-            <a href="#" class="btn-primary">Explore Now</a>
-        </div>
-    </header>
+  <header>
+    <nav>
+      <h1>My Radio Station</h1>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#live-stream">Live Stream</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="features" id="features">
-            <h2>Features</h2>
-            <div class="feature-cards">
-                <div class="card">
-                    <h3>User Broadcasts</h3>
-                    <p>Create your own radio broadcasts and share them with the world.</p>
-                </div>
-                <div class="card">
-                    <h3>AI Broadcasters</h3>
-                    <p>Interact with AI-powered broadcasters and enjoy personalized content.</p>
-                </div>
-                <div class="card">
-                    <h3>Interactive Chat</h3>
-                    <p>Communicate instantly with other listeners and broadcasters.</p>
-                </div>
-            </div>
-        </section>
+  <section id="home" class="section">
+    <div class="content">
+      <h2>Welcome to My Radio Station</h2>
+      <p>Streaming the best music 24/7, all around the globe.</p>
+      <a href="#live-stream" class="button">Listen Now</a>
+    </div>
+  </section>
 
-        <section class="about" id="about-us">
-            <h2>About Us</h2>
-            <p>Fennec is an innovative platform designed to take your radio experience to the next level. We combine artificial intelligence and user interaction to offer a unique experience.</p>
-        </section>
-    </main>
+  <section id="live-stream" class="section">
+    <h2>Live Stream</h2>
+    <div class="player">
+      <p>Currently Playing: <span id="current-track">Top Hits Radio</span></p>
+      <!-- This is a placeholder for the radio stream. Replace with actual stream later -->
+      <audio controls>
+        <source src="http://your-radio-stream-url" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+  </section>
 
-    <footer>
-        <div class="footer-content">
-            <div class="social-media">
-                <a href="#"><img src="icons/facebook.svg" alt="Facebook"></a>
-                <a href="#"><img src="icons/twitter.svg" alt="Twitter"></a>
-                <a href="#"><img src="icons/instagram.svg" alt="Instagram"></a>
-            </div>
-            <p>&copy; 2023 Fennec. All rights reserved.</p>
-        </div>
-    </footer>
+  <section id="about" class="section">
+    <h2>About Us</h2>
+    <p>We are passionate about sharing the best music with listeners all over the world. Tune in anytime, anywhere, and enjoy non-stop radio.</p>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <p>Have a question or want to make a request? Drop us a message at <a href="mailto:contact@myradiostation.com">contact@myradiostation.com</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 My Radio Station</p>
+  </footer>
 </body>
 </html>
