--- a/index.html
+++ b/index.html
@@ -1,57 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Radio Website</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fennec - Your AI-Driven Radio Experience</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <header>
-    <nav>
-      <h1>My Radio Station</h1>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#live-stream">Live Stream</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">Fennec</div>
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <a href="#" class="btn-login">Login</a>
+            </div>
+        </nav>
+        <div class="hero-section" id="home">
+            <div class="container">
+                <h1>Revolutionize Your Listening Experience with Fennec</h1>
+                <p>Discover the power of AI-driven radio, where innovation meets your personal taste.</p>
+                <a href="#features" class="btn-primary">Explore Features</a>
+            </div>
+        </div>
+    </header>
 
-  <section id="home" class="section">
-    <div class="content">
-      <h2>Welcome to My Radio Station</h2>
-      <p>Streaming the best music 24/7, all around the globe.</p>
-      <a href="#live-stream" class="button">Listen Now</a>
-    </div>
-  </section>
+    <main>
+        <section class="features" id="features">
+            <div class="container">
+                <h2>Our Features</h2>
+                <div class="feature-grid">
+                    <div class="feature-card">
+                        <img src="images/user_broadcast.svg" alt="User Broadcast">
+                        <h3>User Broadcasts</h3>
+                        <p>Create your own radio channel and share your passion with the world.</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="images/ai_broadcaster.svg" alt="AI Broadcaster">
+                        <h3>AI Broadcasters</h3>
+                        <p>Engage with AI-driven broadcasters for tailored music, news, and entertainment.</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="images/interactive_chat.svg" alt="Interactive Chat">
+                        <h3>Interactive Chat</h3>
+                        <p>Connect in real-time with other listeners and interact with live broadcasts.</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="images/personal_ai.svg" alt="Personal AI">
+                        <h3>Personal AI DJs</h3>
+                        <p>Get a personalized DJ that adapts to your music taste and mood.</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="images/mood_music.svg" alt="Mood Music">
+                        <h3>Mood-Based Music</h3>
+                        <p>Enjoy music that adapts to your current mood and activities, powered by AI.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-  <section id="live-stream" class="section">
-    <h2>Live Stream</h2>
-    <div class="player">
-      <p>Currently Playing: <span id="current-track">Top Hits Radio</span></p>
-      <!-- This is a placeholder for the radio stream. Replace with actual stream later -->
-      <audio controls>
-        <source src="http://your-radio-stream-url" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-  </section>
+        <section class="about" id="about">
+            <div class="container">
+                <h2>About Us</h2>
+                <p>Fennec is a groundbreaking platform that brings artificial intelligence into the world of radio. We are committed to providing a highly personalized and interactive listening experience, combining user-generated content with advanced AI capabilities.</p>
+            </div>
+        </section>
 
-  <section id="about" class="section">
-    <h2>About Us</h2>
-    <p>We are passionate about sharing the best music with listeners all over the world. Tune in anytime, anywhere, and enjoy non-stop radio.</p>
-  </section>
+        <section class="cta-section">
+            <div class="container">
+                <h2>Ready to Transform Your Listening Experience?</h2>
+                <p>Join Fennec today and be part of the next generation of radio.</p>
+                <a href="#" class="btn-secondary">Get Started</a>
+            </div>
+        </section>
 
-  <section id="contact" class="section">
-    <h2>Contact Us</h2>
-    <p>Have a question or want to make a request? Drop us a message at <a href="mailto:contact@myradiostation.com">contact@myradiostation.com</a></p>
-  </section>
+        <section class="contact" id="contact">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <p>Have questions or feedback? We'd love to hear from you. Reach out to us through the form below.</p>
+                <form class="contact-form">
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="email" placeholder="Your Email" required>
+                    <textarea placeholder="Your Message" required></textarea>
+                    <button type="submit" class="btn-primary">Send Message</button>
+                </form>
+            </div>
+        </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2024 My Radio Station</p>
-  </footer>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">Fennec</div>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="social-media">
+                    <a href="#"><img src="icons/facebook.svg" alt="Facebook"></a>
+                    <a href="#"><img src="icons/twitter.svg" alt="Twitter"></a>
+                    <a href="#"><img src="icons/instagram.svg" alt="Instagram"></a>
+                </div>
+            </div>
+            <p>&copy; 2024 Fennec. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
