--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
                   <a href="reports/report1.pdf">
                     <div class="report-card" >
                       <h3>Project Information Form</h3>
-                      <p>Enter an explanation of the report.</p>
+                      <p>Report is not available yet</p>
                     </div>
                   </a>
 
                   <a href="reports/report2.pdf">
                     <div class="report-card">
                         <h3>Assessment of Innovation Form</h3>
-                        <p>Enter an explanation of the report.</p>                    
+                        <p>Report is not available yet</p>                    
                     </div>
                   </a>
 
                   <a href="reports/report3.pdf">
                     <div class="report-card">
                         <h3>Project Specification Document</h3>
-                        <p>Enter an explanation of the report.</p>                    
+                        <p>Report is not available yet</p>                    
                     </div>
                   </a>
 
                   <a href="reports/report4.pdf">
                       <div class="report-card">
                         <h3>Analysis and Requirements Report</h3>
-                        <p>Enter an explanation of the report.</p>                    
+                        <p>Report is not available yet</p>                    
                     </div>
                   </a>
 
@@ -149,8 +149,15 @@
         <section class="contact" id="contact">
             <div class="container">
                 <h2>Contact Us</h2>
-                <p>Have questions or feedback? We'd love to hear from you. Reach out to us through the E-mail address below.</p>
+                <p>Have questions or feedback? We'd love to hear from you. Reach out to us through the E-mail address below. </p>
+                <p>You can also check our organization on github.</p>
                 <p>E-mail: fennexradio@gmail.com</p>
+
+                <a href="https://github.com/FennecRadio" target="_blank" rel="noopener noreferrer">
+                  <button class="btn2">
+                      <i class="fab fa-github fa-xl"></i>
+                  </button>
+              </a>
             </div>
         </section>
     </main>
