--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   
                     <div class="member-card">
                       <img src="images/feza.jpg">
-                      <h3>Emir Feza Çelik</h3>
+                      <h3>Feza Emir Çelik</h3>
                       <div class="member-links"> 
                         <a href="https://tr.linkedin.com/in/feza?original_referer=https%3A%2F%2Fwww.google.com%2F"><i class="fa-brands fa-linkedin fa-xl" style="color: #ffffff;"></i></a>
                         <a href="https://github.com/fezaemircelik"><i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i></a>
