--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <div class="member-card" >
                       <img src="images/kaan.jpg">
-                      <h3>Hikmet Kaan Oktay</h3>
+                      <h3>Kaan Oktay</h3>
                       <div class="member-links"> 
                         <a href="https://tr.linkedin.com/in/kaan-oktay"><i class="fa-brands fa-linkedin fa-xl" style="color: #ffffff;"></i></a>
                         <a href="https://github.com/hkaanoktay"><i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i></a>
