--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <a href="reports/report1.pdf">
                     <div class="report-card" >
                       <h3>Project Information Form</h3>
-                      <p>Report is not available yet</p>
+                      <p>Our project, group members and general information</p>
                     </div>
                   </a>
 
