--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
                   <a href="reports/report2.pdf">
                     <div class="report-card">
                         <h3>Assessment of Innovation Form</h3>
-                        <p>Report is not available yet</p>                    
+                        <p>Innovation expert evaluations about the project</p>                    
                     </div>
                   </a>
 
                   <a href="reports/report3.pdf">
                     <div class="report-card">
                         <h3>Project Specification Document</h3>
-                        <p>Report is not available yet</p>                    
+                        <p>Use cases, requirements, technologies, contraints and ethics</p>                    
                     </div>
                   </a>
 
