--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <a href="reports/report4.pdf">
                       <div class="report-card">
                         <h3>Analysis and Requirements Report</h3>
-                        <p>Report is not available yet</p>                    
+                        <p>Deeper dive into the project with diagrams</p>                    
                     </div>
                   </a>
 
