--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <h1>Revolutionize Your Listening Experience with Fennec</h1>
                 <p>Discover the power of AI-driven radio, where innovation meets your personal taste.</p>
-                <a href="#features" class="btn-primary">Explore Fennec</a>
+                <a href="https://fennecradio.com" class="btn-primary">Explore Fennec</a>
             </div>
         </div>
     </header>
@@ -227,3 +227,4 @@
 
 </body>
 </html>
+
